--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15793,3 +15793,11 @@ readers do not read off random characters that represent icons */
   margin-bottom: 1.5em;
 }
 
+audio {
+  width: 100%;
+}
+
+.analysis-table {
+  margin-bottom: 5em;
+}
+
