--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15794,7 +15794,7 @@ readers do not read off random characters that represent icons */
 }
 
 .audio-content-analysis {
-  background-color: #e6edf4;
+  background-color: #eaf0f6;
   border: 1px solid #b1c7dd;
   padding: 0.5em;
 }
