--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,6 +30,22 @@
 
 .card {
 	margin-bottom: 1.5em;
+	
+	.card-body {
+		position: relative;
+		height: 8em;
+		overflow: hidden;
+		
+		&:after {
+			position: absolute;
+			content: "";
+			bottom: 0;
+			left: 0;
+			right: 0;
+			height: 1.5em;
+			background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+		}
+	}
 }
 
 .audio-content-analysis {
